Fix overlapping labels

--- a/style.css
+++ b/style.css
@@ -118,10 +118,11 @@ form {
 }
 
 form label {
+	display: inline-block;
 	border: 1px solid rgb(255 255 255 / 50%);
 	border-radius: 1.5em;
 	padding: 0.5em 1.25em 0.5em 1em;
-	margin-right: 0.5rem;
+	margin: 0 0.5rem 0.5rem 0;
 }
 
 form label:has(:checked) {
